--- a/client/src/styles/shared/desciptions.scss
+++ b/client/src/styles/shared/desciptions.scss
@@ -1,9 +1,5 @@
-%description-16 {
-  font-size: 1.6rem;
-  font-family: Manrope, sans-serif;
-  line-height: 1.7;
-}
-
 %description-20 {
   font-size: 2rem;
+  font-family: 'Manrope', sans-serif;
+  font-weight: 400;
 }
