--- a/client/src/styles/base/base.scss
+++ b/client/src/styles/base/base.scss
@@ -8,18 +8,22 @@
 
 html {
   font-size: calc(100vw / 1440 * 10);
-
   line-height: 1;
 
-  @include media("<=phone") {
+  @include media('<=phone') {
     font-size: calc(100vw / 768 * 10);
   }
 }
 
 body {
-  @extend %description-16;
+  @extend %description-20;
 
-  @include media("<=phone") {
+  @include media('<=phone') {
     // font-stretch: 15px;
+  }
+
+  a {
+    color: inherit;
+    text-decoration: none;
   }
 }
