--- a/client/src/styles/shared/titles.scss
+++ b/client/src/styles/shared/titles.scss
@@ -1,13 +1,11 @@
+%title-32 {
+  font-size: 3.2rem;
+  font-family: 'NewParis Headline', sans-serif;
+}
+
 %title-80 {
   font-family: Tinos, sans-serif;
   font-size: 8rem;
   font-weight: bold;
   line-height: 1.3;
-}
-
-%explore-title {
-  font-family: Tinos, sans-serif;
-  font-size: 2rem;
-  font-weight: bold;
-  letter-spacing: 0.5px;
 }
