(Single): Récupération des données des mannequins et update ENUM
Récupérations des donénes des mannequins dans la page des singles mannequins, et
modification des ENUM dans la base de données pour des mots Français

Lors des ENUM en anglais, les valeurs que je récupérer n'étaient donc pas dans la bonne
langue.

--- a/client/src/styles/pages/home.scss
+++ b/client/src/styles/pages/home.scss
@@ -6,7 +6,7 @@
   &__hero {
     // Section Header
     &__header {
-      background-image: url('../../../public/images/femme-visage-peint-arc-en-ciel.jpg');
+      background-image: url('/images/femme-visage-peint-arc-en-ciel.jpg');
       background-position: center;
       background-size: cover;
       filter: grayscale(100%);
